--- a/document/literature.bib
+++ b/document/literature.bib
@@ -88,112 +88,6 @@
   doi       = {10.1007/978-1-4842-4470-8_45}
 }
 
-@inproceedings{10408594,
-  author    = {Wuttke, Alexander and Hunker, Joachim and Rabe, Markus and Diepenbrock, Jan-Philipp},
-  booktitle = {2023 Winter Simulation Conference (WSC)},
-  title     = {Estimating Parameters with Data Farming for Condition-Based Maintenance in a Digital Twin},
-  year      = {2023},
-  volume    = {},
-  number    = {},
-  pages     = {1641-1652},
-  keywords  = {Parameter estimation;Maintenance engineering;Generators;Data models;Digital twins;Sensors;Farming},
-  doi       = {10.1109/WSC60868.2023.10408594}
-}
-
-
-@inproceedings{10408202,
-  author    = {Pappert, Falk Stefan and Seufferth, Daniel and Stein, Heiderose and Rose, Oliver},
-  booktitle = {2023 Winter Simulation Conference (WSC)},
-  title     = {Using Kubernetes to Improve Data Farming Capabilities},
-  year      = {2023},
-  volume    = {},
-  number    = {},
-  pages     = {2052-2063},
-  keywords  = {Containers;Farming},
-  doi       = {10.1109/WSC60868.2023.10408202}
-}
-
-@book{Leonelli2021,
-  author       = {Leonelli, Manuele},
-  howpublished = {electronic; online},
-  title        = {Simulation and Modelling to Understand Change},
-  type         = {book},
-  year         = {2021}
-}
-
-@online{Gartner,
-  author  = {Elliott, Timo},
-  title   = {Digital Business and Business Analytics. GartnerBI: Analytics Moves To The Core},
-  year    = 2013,
-  url     = {https://timoelliott.com/blog/2013/02/gartnerbi-emea-2013-part-1-analytics-moves-to-the-core.html},
-  urldate = {2024-12-01}
-}
-
-@software{Ramirez_FastAPI,
-  author  = {Ramírez, Sebastián},
-  license = {MIT},
-  title   = {{FastAPI}},
-  url     = {https://github.com/fastapi/fastapi}
-}
-
-@software{Meyer_bachelorseminar,
-  author = {Meyer, Patrick},
-  title  = {{bachelorseminar}},
-  url    = {https://github.com/patrick-meyer-1992/bachelorseminar}
-}
-
-@inproceedings{python-mesa-2020,
-  author    = {Kazil, Jackie
-               and Masad, David
-               and Crooks, Andrew},
-  editor    = {Thomson, Robert
-               and Bisgin, Halil
-               and Dancy, Christopher
-               and Hyder, Ayaz
-               and Hussain, Muhammad},
-  title     = {Utilizing Python for Agent-Based Modeling: The Mesa Framework},
-  booktitle = {Social, Cultural, and Behavioral Modeling},
-  year      = {2020},
-  publisher = {Springer International Publishing},
-  address   = {Cham},
-  pages     = {308--317},
-  abstract  = {Mesa is an agent-based modeling framework written in Python. Originally started in 2013, it was created to be the go-to tool in for researchers wishing to build agent-based models with Python. Within this paper we present Mesa's design goals, along with its underlying architecture. This includes its core components: 1) the model (Model, Agent, Schedule, and Space), 2) analysis (Data Collector and Batch Runner) and the visualization (Visualization Server and Visualization Browser Page). We then discuss how agent-based models can be created in Mesa. This is followed by a discussion of applications and extensions by other researchers to demonstrate how Mesa design is decoupled and extensible and thus creating the opportunity for a larger decentralized ecosystem of packages that people can share and reuse for their own needs. Finally, the paper concludes with a summary and discussion of future development areas for Mesa.},
-  isbn      = {978-3-030-61255-9}
-}
-
-@article{jain2014angularjs,
-  title   = {AngularJS: A modern MVC framework in JavaScript},
-  author  = {Jain, Nilesh and Bhansali, Ashok and Mehta, Deepak},
-  journal = {Journal of Global Research in Computer Science},
-  volume  = {5},
-  number  = {12},
-  pages   = {17--23},
-  year    = {2014}
-} 
-
-@online{RabbitMQ,
-  author  = {Broadcom Inc.},
-  title   = {RabbitMQ},
-  year    = 2024,
-  url     = {https://www.rabbitmq.com/},
-  urldate = {2024-12-03}
-}
-
-@book{Isermann_2011,
-  place     = {Berlin},
-  title     = {Fault-diagnosis applications: Model-based condition monitoring: Actuators, drives, machinery, plants, sensors, and fault-tolerant systems},
-  publisher = {Springer},
-  author    = {Isermann, Rolf},
-  year      = {2011}
-} 
-
-@book{Bradshaw_2010,
-  title     = {MongoDB: The Definitive Guide, 1st Edition},
-  publisher = {O'Reilly Media, Inc},
-  author    = {Bradshaw, Shannon and Brazil, Eoin and Chodorow, Kristina},
-  year      = {2010},
-  isbn      = {978-1-449-38156-1}
-} 
 
 @online{rancher,
   author  = {SUSE},
@@ -203,33 +97,15 @@
   urldate = {2024-12-10}
 }
 
-@inproceedings{8632383,
-  author    = {Sanchez, Susan M.},
-  booktitle = {2018 Winter Simulation Conference (WSC)},
-  title     = {DATA FARMING: BETTER DATA, NOT JUST BIG DATA},
-  year      = {2018},
-  volume    = {},
-  number    = {},
-  pages     = {425-439},
-  keywords  = {Big Data;Data models;Data mining;Correlation;Tools;Analytical models;Computational modeling},
-  doi       = {10.1109/WSC.2018.8632383}
-}
-
 @online{cncf,
   author  = {Thakkar, Rajiv},
-  title   = {The voice of Kubernetes experts report 2024: the data trends driving the future of the enterprise},
+  title   = {The Voice of Kubernetes Experts Report 2024: The Data Trends Driving the Future of the Enterprise},
   year    = 2024,
-  url     = {https://www.cncf.io/blog/2024/06/06/the-voice-of-kubernetes-experts-report-2024-the-data-trends-driving-the-future-of-the-enterprise/},
-  urldate = {2024-12-10}
+  url     = {https://portworx.com/resources/voice-of-kubernetes-expert-report/},
+  urldate = {2025-02-09}
 }
 
-@online{emerging_trends,
-  author  = {James, Kay},
-  title   = {Emerging Trends in Microservices and Kubernetes},
-  year    = 2024,
-  url     = {https://www.getambassador.io/blog/emerging-trends-microservices-kubernetes},
-  urldate = {2024-12-10}
-}
+
 
 @online{minikube,
   author  = {The Kubernetes Authors},
@@ -342,7 +218,7 @@
   doi      = {10.1109/MCC.2015.51}
 }
 
-@article{10.1145/1272998.1273025,
+@article{1272998.1273025,
   author     = {Soltesz, Stephen and P\"{o}tzl, Herbert and Fiuczynski, Marc E. and Bavier, Andy and Peterson, Larry},
   title      = {Container-based operating system virtualization: a scalable, high-performance alternative to hypervisors},
   year       = {2007},
@@ -459,6 +335,32 @@
   url       = {https://git-scm.com/book/en/v2}
 }
 
+@article{2898442.2898444,
+  author     = {Burns, Brendan and Grant, Brian and Oppenheimer, David and Brewer, Eric and Wilkes, John},
+  title      = {Borg, Omega, and Kubernetes: Lessons learned from three container-management systems over a decade},
+  year       = {2016},
+  issue_date = {January-February 2016},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {14},
+  number     = {1},
+  issn       = {1542-7730},
+  url        = {https://doi.org/10.1145/2898442.2898444},
+  doi        = {10.1145/2898442.2898444},
+  abstract   = {Though widespread interest in software containers is a relatively recent phenomenon, at Google we have been managing Linux containers at scale for more than ten years and built three different container-management systems in that time. Each system was heavily influenced by its predecessors, even though they were developed for different reasons. This article describes the lessons we’ve learned from developing and operating them.},
+  journal    = {Queue},
+  month      = jan,
+  pages      = {70–93},
+  numpages   = {24}
+}
+
+@inproceedings{43438,
+  title     = {Large-scale cluster management at {Google} with {Borg}},
+  author    = {Abhishek Verma and Luis Pedrosa and Madhukar R. Korupolu and David Oppenheimer and Eric Tune and John Wilkes},
+  year      = {2015},
+  booktitle = {Proceedings of the European Conference on Computer Systems (EuroSys)},
+  address   = {Bordeaux, France}
+}
 
 
 
